--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -17,7 +17,7 @@
         <a href="{% url 'landing:contact-view' %}" class="pb-1.5 relative flex justify-center before:absolute before:bottom-0 before:w-4/6 before:h-0.5 before:bg-cyan-500">contact us</a>
       </nav>
 
-      <a href="#" style="font-variant: small-caps;" class="px-6 py-0.5 text-sm rounded-full bg-cyan-600 text-white flex items-center justify-center gap-1">log in</a>
+      <a href="{% url 'account:signin-view' %}" style="font-variant: small-caps;" class="px-6 py-0.5 text-sm rounded-full bg-cyan-600 text-white flex items-center justify-center gap-1">log in</a>
     </header>
 
     <main class="grow w-full flex flex-col gap-10">
