--- a/account/templates/account.html
+++ b/account/templates/account.html
@@ -8,7 +8,14 @@
     <title>Authentication</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="flex flex-col items-center w-screen max-h-screen"></body>
+  <body class="flex w-screen h-screen bg-slate-100 p-4">
+    <aside class="grow basis-1/2 relative before:absolute before:inset-0 before:bg-black before:bg-opacity-60"></aside>
+    <main class="grow basis-1/2 flex items-center justify-center bg-white">
+      {% block content %}
+
+      {% endblock %}
+    </main>
+  </body>
   {% block script %}
 
   {% endblock %}
