--- a/account/templates/account/signup.html
+++ b/account/templates/account/signup.html
@@ -1,5 +1,23 @@
 {% extends 'account.html' %}
 
 {% block content %}
+  <form method="post" class="w-5/6 flex flex-col items-start gap-8">
+    {% csrf_token %}
+    <div class="w-full flex flex-col items-center">
+      <h2 class="text-2xl font-bold">Enroll</h2>
+      <span class="italic text-gray-600 text-sm" style="font-variant: small-caps;">Excited to learn from us</span>
+    </div>
+    <div class="w-full flex flex-wrap gap-2">
+      <input required name="first_name" type="text" class="grow basis-40 rounded-md px-4 py-2 border-gray-400" placeholder="First name" />
+      <input required name="last_name" type="text" class="grow basis-40 rounded-md px-4 py-2 border-gray-400" placeholder="Last name" />
+      <input required name="username" type="text" class="grow basis-40 rounded-md px-4 py-2 border-gray-400" placeholder="Username" />
+      <input required name="email" type="email" class="grow basis-40 rounded-md px-4 py-2 border-gray-400" placeholder="Email" />
 
+      <input required name="phone_number" type="tel" class="grow basis-40 rounded-md px-4 py-2 border-gray-400" placeholder="Phone Number" />
+      <input required name="password1" type="password" class="grow basis-40 rounded-md px-4 py-2 border-gray-400 text-sm" placeholder="Password" />
+      <input required name="password2" type="password" class="grow basis-40 rounded-md px-4 py-2 border-gray-400 text-sm" placeholder="Repeat password" />
+    </div>
+    <button class="w-full py-2 text-center font-bold bg-gray-500 hover:bg-gray-800 text-white rounded transition-all">Submit</button>
+    <span class="font-semibold text-xs">Got an account? <a href="{% url 'account:signin-view' %}" class="underline">Login here</a></span>
+  </form>
 {% endblock %}
