--- a/student/templates/student.html
+++ b/student/templates/student.html
@@ -8,7 +8,20 @@
     <title>Dashboard | Student</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="flex flex-col items-center w-screen max-h-screen"></body>
+  <body class="flex items-center w-screen h-screen p-4">
+    <aside class="flex flex-col gap-10 h-full w-40 rounded-lg from-blue-500 to-cyan-600 bg-gradient-to-bl p-4">
+      <a href="{% url 'landing:index-view' %}" style="font-variant: small-caps;" class="text-lg text-white pl-2"><span class="text-xl text-cyan-800">cs</span>plus</a>
+
+      <nav class="grow flex flex-col gap-2 text-xs text-white font-semibold">
+        <a style="font-variant: small-caps;" href="{% url 'student:index-view' %}" class="w-full py-1 px-4 rounded-md bg-cyan-700 shadow bg-opacity-30 hover:bg-cyan-400 hover:bg-opacity-100">dashboard</a>
+        <a style="font-variant: small-caps;" href="{% url 'student:attendance-view' %}" class="w-full py-1 px-4 rounded-md bg-cyan-700 shadow bg-opacity-30 hover:bg-cyan-400 hover:bg-opacity-100">attendance</a>
+      </nav>
+
+      <a style="font-variant: small-caps;" href="{% url 'account:signout-view' %}" class="w-full py-0.5 px-4 rounded-md text-white bg-red-500 font-bold">log out</a>
+    </aside>
+
+    <main class="grow overflow-auto p-10"></main>
+  </body>
   {% block script %}
 
   {% endblock %}
