--- a/account/templates/account.html
+++ b/account/templates/account.html
@@ -9,12 +9,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body class="flex w-screen h-screen bg-slate-100 p-4">
-    <aside class="grow basis-1/2 relative before:absolute before:inset-0 before:bg-black before:bg-opacity-60"></aside>
+    <aside class="grow basis-1/2 relative before:absolute before:inset-0 before:bg-black before:bg-opacity-60">
+      <img src="{% static 'banner.jpg' %}" alt="" class="w-full h-full object-cover">
+    </aside>
     <main class="grow basis-1/2 flex items-center justify-center bg-white">
       {% block content %}
 
       {% endblock %}
     </main>
+    {% include 'components/messages.html' %}
   </body>
   {% block script %}
 
