initial implementation of the user dashboard

--- a/employee/templates/employee.html
+++ b/employee/templates/employee.html
@@ -10,7 +10,7 @@
   </head>
   <body class="flex items-center w-screen h-screen bg-slate-50">
     <aside class="flex flex-col items-center gap-6 h-full w-16 rounded-lg bg-white shadow-md py-6">
-      <a href="{% url 'employee:index-view' %}" style="font-variant: small-caps;" class="text-sm text-cyan-400"><span class="text-md text-cyan-800">cs</span>plus</a>
+      <a href="{% url 'employee:index-view' %}" style="font-variant: small-caps;" class="text-lg text-cyan-400"><span class="text-xl text-cyan-800">hiit</span>plc</a>
 
       <nav class="grow flex flex-col gap-2 items-center justify-start px-2.5 w-full">
         <a href="{% url 'employee:index-view' %}" class="w-full aspect-1 bg-cyan-200 transition-all hover:bg-cyan-500 hover:scale-100 text-white rounded-md flex items-center justify-center scale-75">{% heroicon_outline 'home' %}</a>
