--- a/landing/templates/landing/index.html
+++ b/landing/templates/landing/index.html
@@ -6,7 +6,7 @@
     <img src="{% static 'banner.jpg' %}" alt="" class="absolute w-full h-full object-cover brightness-75" />
 
     <div class="w-full h-full font-bold relative flex flex-col items-center justify-end gap-2 p-[10%] pb-[12%] text-white">
-      <h3 class="text-xl md:text-3xl capitalize">csplus management company</h3>
+      <h3 class="text-xl md:text-3xl capitalize">HIITplc management company</h3>
       <h2 class="text-2xl md:text-5xl uppercase">get the most of education</h2>
     </div>
   </section>
