--- a/landing/templates/landing.html
+++ b/landing/templates/landing.html
@@ -10,7 +10,7 @@
   </head>
   <body class="flex flex-col items-center w-screen max-h-screen overflow-x-hidden">
     <header class="w-full flex top-0 z-50 fixed items-center justify-around gap-4 py-4 px-[10%]">
-      <a href="{% url 'landing:index-view' %}" style="font-variant: small-caps;" class="text-lg text-cyan-400"><span class="text-xl text-cyan-800">cs</span>plus</a>
+      <a href="{% url 'landing:index-view' %}" style="font-variant: small-caps;" class="text-lg text-cyan-400"><span class="text-xl text-cyan-800">hiit</span>plc</a>
 
       <nav class="grow h-full flex items-center justify-center gap-4 text-sm text-cyan-300 leading-3 capitalize">
         <a href="{% url 'landing:about-view' %}" class="pb-1.5 relative flex justify-center before:absolute before:bottom-0 before:w-4/6 before:h-0.5 before:bg-cyan-500">about us</a>
