--- a/student/templates/student.html
+++ b/student/templates/student.html
@@ -8,19 +8,26 @@
     <title>Dashboard | Student</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="flex items-center w-screen h-screen p-4">
-    <aside class="flex flex-col gap-10 h-full w-40 rounded-lg from-blue-500 to-cyan-600 bg-gradient-to-bl p-4">
-      <a href="{% url 'landing:index-view' %}" style="font-variant: small-caps;" class="text-lg text-white pl-2"><span class="text-xl text-cyan-800">cs</span>plus</a>
+  <body class="flex items-center w-screen h-screen">
+    <aside class="flex flex-col gap-10 h-full w-40 from-blue-500 to-cyan-600 bg-gradient-to-bl p-4">
+      <a href="{% url 'student:index-view' %}" style="font-variant: small-caps;" class="text-lg text-cyan-400"><span class="text-xl text-cyan-800">hiit</span>plc</a>
 
       <nav class="grow flex flex-col gap-2 text-xs text-white font-semibold">
         <a style="font-variant: small-caps;" href="{% url 'student:index-view' %}" class="w-full py-1 px-4 rounded-md bg-cyan-700 shadow bg-opacity-30 hover:bg-cyan-400 hover:bg-opacity-100">dashboard</a>
         <a style="font-variant: small-caps;" href="{% url 'student:attendance-view' %}" class="w-full py-1 px-4 rounded-md bg-cyan-700 shadow bg-opacity-30 hover:bg-cyan-400 hover:bg-opacity-100">attendance</a>
+
+        <a style="font-variant: small-caps;" href="{% url 'student:profile-view' %}" class="w-full mt-auto py-1 px-4 rounded-md bg-cyan-700 shadow bg-opacity-30 hover:bg-cyan-400 hover:bg-opacity-100">profile</a>
       </nav>
 
       <a style="font-variant: small-caps;" href="{% url 'account:signout-view' %}" class="w-full py-0.5 px-4 rounded-md text-white bg-red-500 font-bold">log out</a>
     </aside>
 
-    <main class="grow overflow-auto p-10"></main>
+    <main class="grow overflow-auto h-full p-6">
+      {% block content %}
+
+      {% endblock %}
+    </main>
+    {% include 'components/messages.html' %}
   </body>
   {% block script %}
 
