--- a/student/templates/student/index.html
+++ b/student/templates/student/index.html
@@ -10,6 +10,15 @@
           <div class="w-32 aspect-1 flex-none rounded-full from-cyan-200 to-cyan-800 bg-gradient-to-tr"></div>
         {% endif %}
 
+        <form action="" method="post">
+          {% csrf_token %}
+          {% if not attendance_today %}
+            <button class="px-6 py-1 text-xs text-white bg-cyan-900 rounded-md">check in</button>
+          {% elif not attendance_today.has_ended %}
+            <button class="px-6 py-1 text-xs text-white bg-cyan-900 rounded-md">check out</button>
+          {% endif %}
+        </form>
+
         <div class="mt-4 text-center capitalize text-lg">{{ user.get_full_name }}</div>
       </div>
 
@@ -57,6 +66,23 @@
         </div>
       </div>
     </div>
-    <div class="h-full flex flex-col gap-4 p-4 basis-80 grow-[2] shadow-md"></div>
+    <div class="h-full flex flex-col gap-4 p-4 basis-80 grow-[2] shadow-md">
+      <div class="w-full flex flex-col gap-6 items-start">
+        <h2 class="text-lg text-slate-600 capitalize font-semibold">my courses</h2>
+        <div class="w-full grow grid gap-6 grid-cols-[repeat(auto-fit,minmax(20rem,1fr))]">
+          {{ user.student.classroom }}
+          {% for room in user.student.classroom.all %}
+            <div class="h-10 bg-black"></div>
+          {% endfor %}
+          {% comment %} <div class="h-10 bg-black"></div>
+          <div class="h-10 bg-black"></div>
+          <div class="h-10 bg-black"></div>
+          <div class="h-10 bg-black"></div>
+          <div class="h-10 bg-black"></div>
+          <div class="h-10 bg-black"></div>
+          <div class="h-10 bg-black"></div> {% endcomment %}
+        </div>
+      </div>
+    </div>
   </section>
 {% endblock %}
